# souper

./: .gitignore  Cargo.toml  LICENSE.md  README.md  soups.json  test-coverage.sh
.github/workflows/: pr.yml  release.yml
src/: dir_scan.rs  main.rs  soup.rs  souper.rs  utils.rs
src/parse/: apt.rs  cargo.rs  csproj.rs  docker_base.rs  mod.rs  package_json.rs
src/scan/: dir_scan.rs  mod.rs
src/soup/: contexts_apply.rs  contexts_combine.rs  contexts_io.rs  contexts_read.rs  mod.rs  model.rs
