[package]
name = "souper"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
quick-xml = "0.23.0"
