[package]
name = "souper"
version = "0.4.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
quick-xml = "0.23.0"
regex = "1.6.0"
lazy_static = "1.4.0"
toml = "0.5.9"

[dev-dependencies]
test-case = "2.1.0"
